--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     const chatContainer = document.getElementById('chat-container');
     const userInput = document.getElementById('user-input');
     const sendBtn = document.getElementById('send-btn');
-    const API_URL = 'http://127.0.0.1:5000/chat';
+    const API_URL = 'https://prem-ai-backend.onrender.com/chat';
 
     function appendMessage(message, className, isSpinner=false) {
       const div = document.createElement('div');
@@ -240,3 +240,4 @@
   </script>
 </body>
 </html>
+
